# mycelium

./: .codespellrc  .cz.toml  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.jsonc  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  deny.toml  justfile  maint-guide.md  package-lock.json  release-plz.toml  rust-toolchain.toml
crates/mycelium-adk/: Cargo.toml
crates/mycelium-adk/src/: agent.rs  guarantee_matrix.rs  lib.rs  model.rs  runner.rs  session.rs  tool.rs
crates/mycelium-cert/: Cargo.toml  README.md
crates/mycelium-cert/src/: check.rs  dense.rs  dense_vsa.rs  lib.rs  mode.rs
crates/mycelium-cert/tests/: check.rs  conformance.rs  mutant_witnesses.rs  sc3.rs
crates/mycelium-cli-common/: Cargo.toml  README.md
crates/mycelium-cli-common/src/: lib.rs
crates/mycelium-core/: Cargo.toml  README.md
crates/mycelium-core/.cargo/: mutants.toml
crates/mycelium-core/src/: binary.rs  bound.rs  cert_mode.rs  content.rs  data.rs  datum.rs  guarantee.rs  id.rs  lib.rs  lower.rs  meta.rs  node.rs  prim.rs  recon.rs  repr.rs  ternary.rs  value.rs
crates/mycelium-core/tests/: guard_hole_census.rs  serde_roundtrip.rs
crates/mycelium-diag/: Cargo.toml  README.md
crates/mycelium-diag/src/: lib.rs  tests.rs
crates/mycelium-doc/: Cargo.toml  README.md
crates/mycelium-doc/src/: apiref.rs  book.rs  build.rs  cache.rs  corpus.rs  doc_lint.rs  highlight.rs  inline.rs  ir.rs  label.rs  lib.rs  lib_index.rs  theme.rs
crates/mycelium-doc/tests/: guard_hole_census.rs  pipeline.rs
crates/mycelium-fmt/: Cargo.toml  README.md
crates/mycelium-fmt/src/: lib.rs  tests.rs
crates/mycelium-fmt/tests/: conformance.rs
crates/mycelium-interp/: Cargo.toml  README.md  mutants.toml
crates/mycelium-interp/src/: budget.rs  lib.rs  parallel.rs  prims.rs  supervise.rs  swap.rs
crates/mycelium-interp/tests/: golden.rs  prim_table.rs
crates/mycelium-l1/: Cargo.toml  README.md
crates/mycelium-l1/examples/: mig818.rs  mig818_stdin.rs
crates/mycelium-l1/src/: affine.rs  ambient.rs  ambient_policy.rs  ast.rs  checkty.rs  decision.rs  deep.rs  elab.rs  error.rs  eval.rs  fuse.rs  grade.rs  legal_pair.rs  lexer.rs  lib.rs  mono.rs  nodule.rs  ord3.rs  parse.rs  preseed.rs  reveal.rs  substrate.rs  token.rs  totality.rs  usefulness.rs
crates/mycelium-l1/tests/: ambient.rs  check.rs  closures.rs  compiler_stage2.rs  compiler_stage3.rs  compiler_stage3_ast.rs  compiler_stage4_ambient.rs  compiler_stage5_semcore.rs  conformance.rs  cross_phylum.rs  ctor_seal.rs  depth_metric_parity.rs  differential.rs  enablement.rs  guard_hole_census.rs  list_literal.rs  lower_derive.rs  object_desugar.rs  phylum.rs  phylum_exec.rs  prim_table.rs  runnable_gate.rs  std_bytes_slice.rs  std_cmp.rs  std_collections.rs  std_core.rs  std_diag.rs  std_fmt.rs  std_generic_conformance.rs  std_iter.rs  std_math.rs  std_option.rs  std_recover.rs  std_result.rs  std_select.rs  std_spore.rs  std_swap.rs  std_ternary.rs  std_testing.rs  std_text.rs  (+4 more)
crates/mycelium-lsp/: Cargo.toml  README.md
crates/mycelium-lsp/src/: completions.rs  expand.rs  feedback.rs  hover.rs  lib.rs  lint.rs  llm_canonical_parser.rs  project.rs  semantic.rs  span.rs  sync.rs  wire.rs
crates/mycelium-lsp/tests/: diagnostics.rs  guard_hole_census.rs  recover.rs  scripted_client.rs
crates/mycelium-mlir/: Cargo.toml  README.md
crates/mycelium-mlir/src/: aot.rs  bitnet.rs  budget.rs  channel.rs  concurrent.rs  dense_codegen.rs  deploy.rs  dialect.rs  inject.rs  jit.rs  lib.rs  llvm.rs  mode.rs  pack.rs  rc_plan.rs  runtime.rs  simd.rs  specialize.rs  swap_codegen.rs  trampoline.rs  vr4.rs  vsa_codegen.rs
crates/mycelium-mlir/tests/: aot_data_sharing.rs  aot_vs_interp_bench.rs  bitnet_throughput.rs  closure_widening_differential.rs  dense_differential.rs  differential.rs  inject_hotswap.rs  jit_differential.rs  mode_selection.rs  native_differential.rs  recursion_differential.rs  recursion_trampoline_differential.rs  simd_differential.rs  specialize_differential.rs  swap_differential.rs  threeway_differential.rs  unified_threeway_differential.rs  vsa_differential.rs  wrong_layout.rs
crates/mycelium-proj/: Cargo.toml  README.md
crates/mycelium-proj/src/: cert_scope.rs  header.rs  lib.rs  manifest.rs  resolve.rs
crates/mycelium-select/: Cargo.toml  README.md
crates/mycelium-stack/: Cargo.toml  README.md
crates/mycelium-std-core/: Cargo.toml  README.md
crates/mycelium-std-fmt/: Cargo.toml  README.md
crates/mycelium-std-io/: Cargo.toml  README.md
crates/mycelium-std-math/: Cargo.toml  README.md
crates/mycelium-std-recover/: Cargo.toml  README.md
crates/mycelium-std-runtime/: Cargo.toml  README.md
crates/mycelium-std-spore/: Cargo.toml  README.md
crates/mycelium-std-sys/: Cargo.toml  README.md
crates/mycelium-tero/: Cargo.toml
crates/mycelium-vsa/: Cargo.toml  README.md
crates/mycelium-web/: Cargo.toml
crates/mycelium-workstack/: Cargo.toml
experiments/: KC2-RUNBOOK.md  README.md  kc2-report.json  kc2-report.json.summary.txt  pyproject.toml  run-kc2-matrix.sh
experiments/docker/: Dockerfile  README.md  docker-compose.yml  gpu-setup.sh  run.sh
experiments/mycelium_experiments/: __init__.py
experiments/primers/: mycelium-examples.txt  mycelium-minimal.txt
experiments/results/: 20260618T005625Z-seed42.attempts.jsonl  20260618T005625Z-seed42.json  20260618T005625Z-seed42.summary.txt  20260618T010154Z-seed42.json  20260618T010154Z-seed42.summary.txt  20260618T010208Z-seed42.json  20260618T010452Z-seed42.attempts.jsonl  20260618T010452Z-seed42.summary.txt  index.json
experiments/surface-fragment/: README.md
experiments/tests/: test_kc2.py  test_smoke.py  test_vsa_bounds.py
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: depth_common.rs  fuzz_core_value_deser.rs  fuzz_depth_check.rs  fuzz_depth_interp.rs  fuzz_depth_parse.rs  fuzz_l1_parse.rs  fuzz_m210_checker.rs
xtask/: Cargo.toml  deps-strata.toml
xtask/src/: e1.rs  kc4.rs  main.rs  recursion_probe.rs
(+1713 files in other folders)
