# Mycelium Rust workspace (M-091). The Rust kernel is the reference interpreter + trusted base
# (ADR-007); MLIR->LLVM is the AOT perf path. Crates are skeletons here — types/semantics land
# per their own issues (M-101+). MSRV is pinned to 1.92 (ADR-007); see rust-toolchain.toml.
[workspace]
resolver = "2"
members = [
    "crates/mycelium-core",
    "crates/mycelium-dense",
    "crates/mycelium-interp",
    "crates/mycelium-numerics",
    "crates/mycelium-select",
    "crates/mycelium-l1",
    "crates/mycelium-vsa",
    "crates/mycelium-mlir",
    "crates/mycelium-cert",
    "crates/mycelium-lsp",
    "crates/mycelium-build",
    "crates/mycelium-proj",
    "xtask",
]

[workspace.package]
edition = "2021"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/tzervas/mycelium"

[workspace.lints.rust]
# ADR-014: `unsafe` is permitted-but-warned (not forbidden). Plain `cargo build`/`cargo test`
# (dev/test) warn at every unsafe site — the caution incentive — and still compile/run; the
# `just check` lint gate exempts only this lint (`-A unsafe_code`) so intentional, justified unsafe
# passes CI; a site silences the dev warning for production release with
# `#[cfg_attr(not(debug_assertions), allow(unsafe_code))]` + a mandatory `// SAFETY:` comment.
# Trusted-base crates should stay unsafe-free (may re-pin `unsafe_code = "forbid"` per-crate).
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Release arithmetic aligns with the never-silent honesty ethos (G2): trusted-kernel arithmetic
# must panic on overflow, not silently wrap. Cargo disables overflow-checks in release by
# default; we re-enable them so a release build fails loudly rather than producing a wrong value.
[profile.release]
overflow-checks = true
