# Mycelium Rust workspace (M-091). The Rust kernel is the reference interpreter + trusted base
# (ADR-007); MLIR->LLVM is the AOT perf path. Crates are skeletons here — types/semantics land
# per their own issues (M-101+). MSRV is pinned to 1.96.1 (ADR-007, bumped by ADR-041); see rust-toolchain.toml.
[workspace]
resolver = "2"
members = [
    "crates/mycelium-core",
    "crates/mycelium-sched",
    "crates/mycelium-rt-abi",
    "crates/mycelium-dense",
    "crates/mycelium-interp",
    "crates/mycelium-numerics",
    "crates/mycelium-select",
    "crates/mycelium-l1",
    "crates/mycelium-stack",
    "crates/mycelium-workstack",
    "crates/mycelium-vsa",
    "crates/mycelium-vsa-decode",
    "crates/mycelium-mlir",
    "crates/mycelium-mir-passes",
    "crates/mycelium-cert",
    "crates/mycelium-lsp",
    "crates/mycelium-build",
    "crates/mycelium-proj",
    "crates/mycelium-fmt",
    "crates/mycelium-spore",
    "crates/mycelium-diag",
    "crates/mycelium-check",
    "crates/mycelium-sec",
    "crates/mycelium-lint",
    "crates/mycelium-doc",
    "crates/mycelium-std-core",
    "crates/mycelium-std-ternary",
    "crates/mycelium-std-content",
    "crates/mycelium-std-dense",
    "crates/mycelium-std-select",
    "crates/mycelium-std-vsa",
    "crates/mycelium-std-swap",
    "crates/mycelium-std-collections",
    "crates/mycelium-std-error",
    "crates/mycelium-std-cmp",
    "crates/mycelium-std-iter",
    "crates/mycelium-std-math",
    "crates/mycelium-std-numerics",
    "crates/mycelium-std-text",
    "crates/mycelium-std-fmt",
    "crates/mycelium-std-diag",
    "crates/mycelium-std-recover",
    "crates/mycelium-std-spore",
    "crates/mycelium-std-runtime",
    "crates/mycelium-std-testing",
    "crates/mycelium-std-conformance",
    "crates/mycelium-std-io",
    "crates/mycelium-std-fs",
    "crates/mycelium-std-time",
    "crates/mycelium-std-rand",
    "crates/mycelium-std-sys",
    "crates/mycelium-std-sys-host",
    "crates/mycelium-cli-common",
    "crates/mycelium-cli",
    "crates/mycelium-bench",
    "crates/mycelium-tero",
    "crates/mycelium-transpile",
    "xtask",
]

[workspace.package]
edition = "2021"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/tzervas/mycelium"

# M-376 P1: hoisted external deps so version bumps are single-point (DN-17 §2.1).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
# M-1017 (DN-87 §2.3 / ADR-044): the async runtime + web framework behind the `mycelium-tero` HTTP
# front. The FIRST async runtime in the workspace — a deliberate, maintainer-authorized decision (the
# HTTP API is a genuinely concurrent, multi-client server surface, unlike every prior crate). Consumers
# add the feature set they need (`tokio = { workspace = true, features = [...] }`). Plain HTTP only —
# no TLS/`rustls`/`ring` pulled (the token-scoped floor binds 127.0.0.1; TLS is the reverse-proxy's job).
tokio = { version = "1" }
axum = { version = "0.8" }

[workspace.lints.rust]
# ADR-014 (refined, maintainer directive 2026-07-09): `unsafe` is permitted-but-DOCUMENTED, not
# forbidden. The policy is now enforced by ONE precise lint — `clippy::undocumented_unsafe_blocks`
# (below) — instead of a blanket `unsafe_code` warn that fired on *every* unsafe site (documented or
# not) and so erroneously flagged intentional, justified unsafe under any `-D warnings` run that
# lacked the `-A unsafe_code` exemption. So `unsafe_code` is set to **`allow`** here: an intentional,
# documented unsafe block passes **everywhere** — local `just check`, remote CI (`just ci`, same
# suite), AND ad-hoc `cargo clippy -D warnings` — with no exemption flag to remember, while an
# **undocumented** unsafe block (no `// SAFETY:` comment) is still caught by
# `undocumented_unsafe_blocks`. This is *config-level*, so both local and remote inherit it.
# What still guards unsafe (unchanged): (1) trusted-base crates keep their **source-level**
# `#![forbid(unsafe_code)]` (mycelium-core/-cert/-numerics/-vsa) — `forbid` overrides this workspace
# `allow`, so they stay unsafe-free; (2) `scripts/checks/scan.sh` enforces confinement + a per-site
# `#[allow(unsafe_code)]` intentionality marker; (3) `undocumented_unsafe_blocks` enforces the
# mandatory `// SAFETY:` comment. All existing unsafe is confined to `mycelium-mlir/src/jit.rs`
# (DN-21/u78), documented, and passes.
unsafe_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# ADR-014 enforcement (maintainer directive 2026-07-09): this is now THE unsafe check — it catches
# *undocumented* unsafe (an `unsafe` block with no `// SAFETY:` comment) while `unsafe_code = "allow"`
# (above) lets documented, intentional unsafe pass everywhere. `warn` here + `-D warnings` (local
# `just check` AND remote `just ci`, same suite) => deny-in-gate for undocumented unsafe; documented
# unsafe never trips it. No `-A unsafe_code` flag is needed any longer (the exemption is redundant
# now that `unsafe_code` is `allow`), so ad-hoc `cargo clippy -D warnings` no longer erroneously
# alarms on intentional unsafe. This turns the "mandatory `// SAFETY:` comment" into a checked
# requirement, not a convention.
undocumented_unsafe_blocks = "warn"

# Release arithmetic aligns with the never-silent honesty ethos (G2): trusted-kernel arithmetic
# must panic on overflow, not silently wrap. Cargo disables overflow-checks in release by
# default; we re-enable them so a release build fails loudly rather than producing a wrong value.
[profile.release]
overflow-checks = true
