# Mycelium experiments — UV-managed Python project (M-092; ADR-007: Python 3.13/3.14).
# Home for the KC-2 LLM-leverage experiment (M-002) and other throwaway/measurement code.
# Not the kernel — the kernel is Rust (mycelium-core et al.).
[project]
name = "mycelium-experiments"
version = "0.0.0"
description = "Mycelium measurement & experiment harnesses (KC-2 et al.)."
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "black>=24"]

[tool.uv]
package = false  # virtual project: no build backend needed for a measurement harness

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.black]
target-version = ["py313"]
line-length = 100
