# Mycelium experiments — UV-managed Python project (M-092; ADR-007: Python 3.13/3.14).
# Home for the KC-2 LLM-leverage experiment (M-002) and other throwaway/measurement code.
# Not the kernel — the kernel is Rust (mycelium-core et al.).
[project]
name = "mycelium-experiments"
version = "0.0.0"
description = "Mycelium measurement & experiment harnesses (KC-2 et al.)."
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "black>=24",
    # numpy required for vsa_bounds experiment tests (M-832); always available, no GPU needed.
    "numpy>=2.0",
]
# GPU group: install for the vsa_bounds experiment (M-832) and other GPU-accelerated
# harnesses.  Core tests and the numpy path work without these.
# Usage: uv sync --group gpu
gpu = [
    "torch>=2.13.0",
    "matplotlib>=3.9",
]

[tool.uv]
package = false  # virtual project: no build backend needed for a measurement harness

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.black]
target-version = ["py313"]
line-length = 100
