[package]
name = "xtask"
version = "0.0.0"
description = "Repo automation entrypoint (cargo xtask ...). Placeholder."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# The KC-4 cert-overhead measurement (M-212) drives the real swap + checker surface.
mycelium-cert = { path = "../crates/mycelium-cert" }
mycelium-core = { path = "../crates/mycelium-core" }
mycelium-numerics = { path = "../crates/mycelium-numerics" }
