[package]
name = "xtask"
version = "0.0.0"
description = "Repo automation entrypoint (cargo xtask ...). Placeholder."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# The KC-4 cert-overhead measurement (M-212) drives the real swap + checker surface.
mycelium-cert = { path = "../crates/mycelium-cert" }
mycelium-core = { path = "../crates/mycelium-core" }
mycelium-numerics = { path = "../crates/mycelium-numerics" }
# The E1 staged-packing perf stub (M-250) times the substrate packing codec; M-303 adds the native
# AOT path (compile-once / run-many) vs the reference interpreter.
mycelium-mlir = { path = "../crates/mycelium-mlir" }
mycelium-interp = { path = "../crates/mycelium-interp" }
