[package]
name = "xtask"
version.workspace = true
description = "Repo automation entrypoint (cargo xtask ...). Placeholder."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# The KC-4 cert-overhead measurement (M-212) drives the real swap + checker surface.
mycelium-cert = { path = "../crates/mycelium-cert", version = "0.463.1" }
mycelium-core = { path = "../crates/mycelium-core", version = "0.463.1" }
mycelium-numerics = { path = "../crates/mycelium-numerics", version = "0.463.1" }
# The E1 staged-packing perf stub (M-250) times the substrate packing codec; M-303 adds the native
# AOT path (compile-once / run-many) vs the reference interpreter.
mycelium-mlir = { path = "../crates/mycelium-mlir", version = "0.463.1" }
mycelium-interp = { path = "../crates/mycelium-interp", version = "0.463.1" }
# The `deps` task (M-877/M-878/M-879) — structural acyclic-deps gate over `cargo metadata`.
cargo_metadata = "0.23"
serde.workspace = true
toml = "1"
