[package]
name = "mycelium-core"
version = "0.0.0"
description = "Mycelium Core IR: Value<Repr,Meta>, guarantee lattice, content-addressing (RFC-0001). Skeleton; types land in M-101+."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Content-addressing (M-103): hash-of-AST identity. BLAKE3 is the fixed kernel hash (id::ContentHash).
blake3 = "1"
# (De)serialization to/from the ratified JSON data contracts (M-104; RFC-0001 §4.8).
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# JSON round-trip + schema-shape tests; the on-the-wire form is JSON (M-104).
serde_json = "1"
