[package]
name = "mycelium-interp"
version = "0.0.0"
description = "Reference interpreter — the trusted executable semantics for the Core IR (RFC-0004; ADR-009). Skeleton; M-110."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
# The verified-numerics kernels: composing an approximate input's bound honestly (M-204; ADR-010).
mycelium-numerics = { path = "../mycelium-numerics" }
# The work-stealing OS-thread Scheduler (M-709/M-861), relocated below mycelium-interp (E25) so
# the interpreter's own parallel evaluation (M-862) can use it without a
# mycelium-interp <-> mycelium-std-runtime cycle. Not yet wired into src/ here — that rewire is
# M-862's own scoped change; this dependency only makes the Scheduler available.
mycelium-sched = { path = "../mycelium-sched" }
