[package]
name = "mycelium-interp"
version = "0.0.0"
description = "Reference interpreter — the trusted executable semantics for the Core IR (RFC-0004; ADR-009). Skeleton; M-110."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
# The Dense paradigm kernel: the dense elementwise prim group (`dense.*`, M-890) delegates to
# `DenseSpace` — the kernel constructs the result `Value` with its honest per-op tag/bound and the
# prim wrapper carries it through unchanged (VR-5). Downward-only dep (DN-66: dense sits on core).
mycelium-dense = { path = "../mycelium-dense" }
# The verified-numerics kernels: composing an approximate input's bound honestly (M-204; ADR-010).
mycelium-numerics = { path = "../mycelium-numerics" }
# The work-stealing OS-thread Scheduler (M-709/M-861), relocated below mycelium-interp (E25) so
# the interpreter's own parallel evaluation (M-862) can use it without a
# mycelium-interp <-> mycelium-std-runtime cycle. Wired into `src/parallel.rs` (M-862): the
# top-level pure-argument batch is dispatched through `Scheduler::run_indexed`.
mycelium-sched = { path = "../mycelium-sched" }
