[package]
name = "mycelium-interp"
version = "0.0.0"
description = "Reference interpreter — the trusted executable semantics for the Core IR (RFC-0004; ADR-009). Skeleton; M-110."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
# The Dense paradigm kernel: the dense elementwise prim group (`dense.*`, M-890) delegates to
# `DenseSpace` — the kernel constructs the result `Value` with its honest per-op tag/bound and the
# prim wrapper carries it through unchanged (VR-5). Downward-only dep (DN-66: dense sits on core).
mycelium-dense = { path = "../mycelium-dense" }
# The verified-numerics kernels: composing an approximate input's bound honestly (M-204; ADR-010).
mycelium-numerics = { path = "../mycelium-numerics" }
# The work-stealing OS-thread Scheduler (M-709/M-861), relocated below mycelium-interp (E25) so
# the interpreter's own parallel evaluation (M-862) can use it without a
# mycelium-interp <-> mycelium-std-runtime cycle. Wired into `src/parallel.rs` (M-862): the
# top-level pure-argument batch is dispatched through `Scheduler::run_indexed`.
mycelium-sched = { path = "../mycelium-sched" }
# The VSA algebra kernel: the model-dispatched VSA bind group (`vsa.*`, M-892) delegates to the
# Value-level model ops (`MapI`/`Fhrr`/`Bsc`) — the kernel constructs the result `Value` with its
# honest per-model tag/bound and the prim wrapper carries it through unchanged (VR-5).
# Downward-only dep (ADR-008: vsa sits on core — the M-890 `mycelium-dense` precedent).
mycelium-vsa = { path = "../mycelium-vsa" }
# M-912 (`enb`): surfaces the kernel's own content-addressing hash (BLAKE3, M-103 —
# `mycelium-core::content::Canon`/`id::ContentHash` already use it) as the `hash.blake3` prim. Same
# crate + version the kernel content-addresses with (workspace-pinned), so the wrapper adds no
# additional algorithmic uncertainty beyond the kernel's own use — the basis for the `Exact` tag.
blake3.workspace = true
