[package]
name = "mycelium-l1"
version = "0.0.0"
description = "L1 prototype (RFC-0006/RFC-0007; NON-NORMATIVE until those RFCs are ratified): lexer + parser for the ratified DN-02 vocabulary (conformance-corpus gated), the v0 monomorphic typechecker, the structural totality checker + matured gate, the fuel-guarded L1 evaluator, and elaboration to the L0 Core IR on the evaluation-complete fragment."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# The L1 evaluator produces L0 values and reuses the trusted primitive/swap semantics — the same
# registries the reference interpreter and the AOT path share (RFC-0007 §4.6).
mycelium-core = { path = "../mycelium-core" }
mycelium-interp = { path = "../mycelium-interp" }
mycelium-cert = { path = "../mycelium-cert" }
# Host-stack management for the recursive checker/elaborator, kept OUTSIDE this trusted kernel so the
# kernel stays `#![forbid(unsafe_code)]` (ADR-014). The kernel calls only its safe `with_deep_stack`.
mycelium-stack = { path = "../mycelium-stack" }

[dev-dependencies]
# The RFC-0007 §4.6 differential: L1-eval vs elaborate→L0-interp vs elaborate→AOT, validated
# through the M-210 shared TV checker.
mycelium-mlir = { path = "../mycelium-mlir" }
mycelium-numerics = { path = "../mycelium-numerics" }
# M-931 (kickoff opp, RFC-0031 D6): the retained Rust oracle for std_error.rs's differential — the
# .myc port of std.error is checked against mycelium-std-error's public combinator surface. Test
# scope only (D6: the crate is not retired, and this port does not make it a runtime dependency).
mycelium-std-error = { path = "../mycelium-std-error" }
# M-926 (kickoff `opp`, RFC-0031 D5 row 4): the retained Rust oracle for the `std.diag` port
# (`tests/std_diag.rs`) — the differential compares the `.myc` guarantee-matrix port against the
# ACTUAL `mycelium_std_diag::guarantee_matrix::MATRIX` data at test time (not a hardcoded literal).
mycelium-std-diag = { path = "../mycelium-std-diag" }
# M-933 (kickoff `opp`, RFC-0031 D5 row 4): the retained Rust oracle for the `std.ternary` port
# (`tests/std_ternary.rs`) — the numeric-edge differential (carries, bounds, codec round-trips,
# packed-byte values) compares the `.myc` port against mycelium-std-ternary's public API live at
# test time. Test scope only (D6: the crate is not retired).
mycelium-std-ternary = { path = "../mycelium-std-ternary" }
